# testedprofit

./: .gitignore  404.html  BingSiteAuth.xml  CNAME  README.md  generate_sitemap.py  googletag.txt  index.html  index.txt  package-lock.json  package.json  robots.txt  sitemap.xml  tailwind.config.js  testedprofit.html  yandex_507c5639b49cc176.html
.well-known/: security.txt
Algohub/: index.html
CO/: index.html
Captain James Cook Statue/: index.html
CheckIP/: index.html
Crypto Tax-Loss Harvester/: index.html
Freelance Rate Fairness Checker/: index.html
HI/: index.html
Impermanent Loss Visualizer/: index.html
KY/: index.html
TikTok Shop Fee Calculator & Profit Estimator/: index.html
US Kitchen & Unit Standard/: index.html
algosocial/: index.html
cdd/: style.css
conservation-fund/contracts/: README.md  compile_contracts.ps1  pyproject.toml
conservation-fund/contracts/algo_pool/: contract.py  deploy.py
conservation-fund/contracts/algo_pool_v2/: cron_bot.py
conservation-fund/contracts/artifacts/algo_pool/: AlgoPool.approval.teal  AlgoPool.arc56.json
conservation-fund/contracts/artifacts/profit_lock/: ProfitLock.approval.teal  ProfitLock.arc56.json
conservation-fund/contracts/profit_lock/: contract.py  deploy.py
conservation-fund/contracts/rework_archive/: README.md
conservation-fund/contracts/rework_archive/frontend/algopool/: index.html
docs/: FABLE5_NFT_STUDIO_AUTOMATION_HANDOFF.md  FABLE5_NFT_STUDIO_HANDOFF.md
espanol/: CNAME  index.html  sitemap.xml
freebrowsergames/: index.html
rotary-park/: index.html
src/: input.css  (+1 more)
(+482 files in other folders)
